--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -9,29 +9,35 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link{% if title == 'Library' %} active" aria-current="page" {% else %}"{% endif %}
-                        href="/">Library</a>
+                        href="/">{{ t('Library') }}</a>
                 </li>
                 {% if current_user.is_admin or admin_account_created == false %}
                 <li class="nav-item">
                     <a class="nav-link{% if title == 'Settings' %} active" aria-current="page" {% else %}"{% endif %}"
-                        href="/settings">Settings</a>
+                        href="/settings">{{ t('Settings') }}</a>
                 </li>
                 {% endif %}
                 <li class="nav-item">
                     <a class="nav-link{% if title == 'Setup' %} active" aria-current="page" {% else %}"{% endif %}"
-                        href="#">Setup</a>
+                        href="#">{{ t('Setup') }}</a>
                 </li>
             </ul>
             {% if current_user.is_authenticated %}
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="btn btn-outline-secondary me-2" href="/logout" role="button">Logout</a>
+                    <button class="btn btn-outline-secondary me-2" id="themeToggle" onclick="toggleTheme()"
+                        title="{{ t('Toggle Theme') }}">
+                        <i class="bi bi-circle-half"></i>
+                    </button>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-outline-secondary me-2" href="/logout" role="button">{{ t('Logout') }}</a>
                 </li>
             </ul>
             {% else %}
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="btn btn-outline-secondary me-2" href="/login" role="button">Login</a>
+                    <a class="btn btn-outline-secondary me-2" href="/login" role="button">{{ t('Login') }}</a>
                 </li>
             </ul>
             {% endif %}
