--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -66,9 +66,9 @@
                     <caption>List of users:</caption>
                     <thead>
                         <tr>
-                            <th scope="col">User</th>
-                            <th scope="col">Permissions</th>
-                            <th scope="col">Actions</th>
+                            <th scope="col">{{ t('User') }}</th>
+                            <th scope="col">{{ t('Permissions') }}</th>
+                            <th scope="col">{{ t('Actions') }}</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -125,7 +125,7 @@
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="deleteUserModalLabel">Delete user</h1>
+                                <h1 class="modal-title fs-5" id="deleteUserModalLabel">{{ t('Delete user') }}</h1>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
@@ -133,8 +133,10 @@
                                 ...
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Delete</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ t('Cancel')
+                                    }}</button>
+                                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">{{ t('Delete')
+                                    }}</button>
                             </div>
                         </div>
                     </div>
@@ -144,13 +146,13 @@
 
                 <h2 class="pb-3">Library</h2>
 
-                <label class="form-label">Library paths:</label>
-                <div id="libraryPathHelp" class="form-text">Path of directory containing your games.</div>
+                <label class="form-label">{{ t('Library paths') }}:</label>
+                <div id="libraryPathHelp" class="form-text">{{ t('Path of directory containing your games') }}.</div>
                 <table class="table table-hover caption-top" id="pathsTable">
                     <thead>
                         <tr>
-                            <th scope="col">Path</th>
-                            <th scope="col">Actions</th>
+                            <th scope="col">{{ t('Path') }}</th>
+                            <th scope="col">{{ t('Actions') }}</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -162,7 +164,7 @@
                     <div class="col-auto">
                         <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseNewPath" aria-expanded="false" aria-controls="collapseNewPath">
-                            Add library path
+                            {{ t('Add library path') }}
                         </button>
                     </div>
 
