--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% if title %}
-    <title>MyFoil | {{title}}</title>
+    <title>MyFoil | {{ t(title) }}</title>
     {%else%}
     <title>MyFoil</title>
     {%endif%}
